hphp/test/vm/nested_vm_exceptions.php.exp
Error handler
We hit our handler.
HipHop Fatal error: Uncaught exception 'Exception' with message 'Sup' in hphp/test/vm/nested_vm_exceptions.php:20\nStack trace:\n#0 {main}
